--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.56.0"
   },
+  "overrides": {
+    "ajv": "^8.18.0",
+    "minimatch": "^10.2.1"
+  },
   "lint-staged": {
     "*.{md,yaml}": "prettier --write",
     "charts/**/README.md": "npm run generate"
